# gvclass

./: .dockerignore  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  ALPHA_TESTING.md  CHANGELOG.md  LICENCE  README.md  gvclass  gvclass-a  gvclass-a.py  gvclass_apptainer.sh  gvclass_docker.sh  gvclass_shifter.sh  main.nf  mkdocs.yml  nextflow.config  pixi.toml  pixi.toml.backup  plan.md  pyproject.toml  release_notes_v1.2.1.md  run_clean.py  run_gvclass.py  run_gvclass_container.sh  setup.py  test_genetic_codes.py
benchmarking/: .gitignore  README.md  RUNBOOK.md
config/: gvclass_config.yaml  gvclass_config_test.yaml
containers/: README.md  build.sh
docs/: CHANGELOG.md  DASK_MIGRATION.md  NEW_STRUCTURE.md  implementation_report.md  index.md  markers_gvclassV1.tsv  migration_summary.md  prefect_usage.md  quality_metrics.md  requirements.txt  workflow_diagram.md
example/: AC3300009314___Ga0117908_1000406.fna  AC3300027503___Ga0255182_1000024.fna  AC3300035181___Ga0373632_0000742.fna  AC3300044971___Ga0453756_0000199.fna  GVMAG-S-1064190-84.fna  GVMAG-S-1096109-37.fna  PkV-RF01.faa  jumbo1.fna
example_gvclass/: AC3300027503___Ga0255182_1000024.summary.tab  PkV-RF01.summary.tab  gvclass_summary.tsv
local_test/: AC3300027503___Ga0255182_1000024.summary.tab  PkV-RF01.summary.tab  gvclass_summary.tsv
logs/: gvclass_array_18049868_0.err  gvclass_array_18049868_0.out  gvclass_array_18049902_0.err  gvclass_array_18049902_0.out  gvclass_array_18049904_0.out  gvclass_array_18049905_0.out  gvclass_array_18049914_0.out  gvclass_array_18049921_0.err  gvclass_array_18049921_0.out  gvclass_array_18049926_0.out  gvclass_array_18049964_0.out  gvclass_array_18050124_0.out  gvclass_array_18050124_1.out  gvclass_array_18050124_10.out  gvclass_array_18050124_11.out  gvclass_array_18050124_12.out  gvclass_array_18050124_13.out  gvclass_array_18050124_14.out  gvclass_array_18050124_15.out  gvclass_array_18050124_16.out  gvclass_array_18050124_17.out  gvclass_array_18050124_18.out  gvclass_array_18050124_19.out  gvclass_array_18050124_2.out  gvclass_array_18050124_20.out  gvclass_array_18050124_21.out  gvclass_array_18050124_22.out  gvclass_array_18050124_23.out  gvclass_array_18050124_24.err  gvclass_array_18050124_24.out  gvclass_array_18050124_25.out  gvclass_array_18050124_26.out  gvclass_array_18050124_27.out  gvclass_array_18050124_28.out  gvclass_array_18050124_29.out  gvclass_array_18050124_3.out  gvclass_array_18050124_30.out  gvclass_array_18050124_31.out  gvclass_array_18050124_32.out  gvclass_array_18050124_33.out  (+56 more)
modules/: align_trim.nf  blastp.nf  build_trees.nf  cleanup.nf  combinedout.nf  extract_qhits.nf  genecalling.nf  get_nn.nf  hmmsearch.nf  log_info.nf  reformat.nf  summarize.nf
release_notes/: v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.3.0.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.5.0.md
resources/: GVOG9.hmm  ncldvApril22_labels.txt  ncldvOct22_labels.txt  novelty_completeness_config.json  novelty_strategy2_baselines.tsv  novelty_strategy2_tiers.tsv  novelty_strategy3_model_metadata.tsv
scripts/: build_group_faas.py  build_marker_groups.py  gen_marker_annotations_doc.py  harmonize_labels.py  relabel_ppv_preplasmiviricota.py  rotate_contamination_model.py  verify_ppv_migration.py
src/: __init__.py  __version__.py
tests/: conftest.py  test_alignment_helpers.py  test_blast_redundancy.py  test_blast_topn.py  test_caps_classification.py  test_category_dedup.py  (+36 more)
(+426 files in other folders)
